gitignore fixed and fixed home fragment

--- a/app/src/main/res/layout/home_fragment_main.xml
+++ b/app/src/main/res/layout/home_fragment_main.xml
@@ -9,37 +9,31 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="hva.groepje12.quitsmokinghabits.ui.fragment.HomeFragment">
 
-
     <TextView
         android:id="@+id/welcomeTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
-        android:gravity="center"
         android:layout_centerHorizontal="true"
-
+        android:gravity="center"
         android:text="Welkom "
         android:textSize="30sp" />
 
     <View
         android:id="@+id/horizontalRule1"
         android:layout_width="fill_parent"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="20dp"
         android:layout_height="1dp"
-        android:background="?android:attr/dividerHorizontal"
-
-        android:layout_below="@id/welcomeTextView"/>
-
-
+        android:layout_below="@id/welcomeTextView"
+        android:layout_marginBottom="20dp"
+        android:layout_marginTop="10dp"
+        android:background="?android:attr/dividerHorizontal" />
 
 
     <LinearLayout
+        android:id="@+id/bovensteKaarten"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/bovensteKaarten"
-        android:layout_marginLeft="13dp"
         android:layout_below="@id/horizontalRule1"
+        android:gravity="center"
         android:orientation="horizontal">
 
         <android.support.v7.widget.CardView
@@ -47,7 +41,7 @@
             android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_margin="1dp"
+            android:layout_margin="3dp"
             card_view:cardCornerRadius="2dp"
             card_view:contentPadding="10dp">
 
@@ -60,8 +54,7 @@
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:layout_centerHorizontal="true"
-                    android:src="@drawable/instagram"
-                    />
+                    android:src="@drawable/instagram" />
 
                 <TextView
                     android:id="@+id/tv_timeNotSmoked"
@@ -70,10 +63,10 @@
                     android:layout_below="@+id/img_time"
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="5dp"
-                    android:textSize="20sp"
-                    android:textStyle="bold"
                     android:text="15h 23m"
-                     />
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
+
                 <TextView
                     android:id="@+id/timeSinceLastCigaretteDesc"
                     android:layout_width="wrap_content"
@@ -81,9 +74,8 @@
                     android:layout_below="@+id/tv_timeNotSmoked"
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="2dp"
-                    android:textSize="12sp"
-                    android:text="sinds laatste sigaret"
-                    />
+                    android:text="Laatste Sigaret"
+                    android:textSize="12sp" />
             </RelativeLayout>
         </android.support.v7.widget.CardView>
 
@@ -93,7 +85,7 @@
             android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_margin="1dp"
+            android:layout_margin="3dp"
             card_view:cardCornerRadius="2dp"
             card_view:contentPadding="10dp">
 
@@ -106,8 +98,7 @@
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:layout_centerHorizontal="true"
-                    android:src="@drawable/instagram"
-                    />
+                    android:src="@drawable/instagram" />
 
                 <TextView
                     android:id="@+id/tv_cigarettesNotSmokedToday"
@@ -116,11 +107,11 @@
                     android:layout_below="@+id/img_nocig"
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="5dp"
-                    android:textSize="20sp"
-                    android:textColor="#00f239"
-                    android:textStyle="bold"
                     android:text="15"
-                    />
+                    android:textColor="#00f239"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
+
                 <TextView
                     android:id="@+id/cigarettesNotTodayDescription"
                     android:layout_width="wrap_content"
@@ -128,19 +119,18 @@
                     android:layout_below="@+id/tv_cigarettesNotSmokedToday"
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="2dp"
-                    android:textSize="12sp"
-                    android:text="sigaretten niet gerookt"
-                    />
+                    android:text="Sigaretten Bespaard"
+                    android:textSize="12sp" />
             </RelativeLayout>
         </android.support.v7.widget.CardView>
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/ondersteKaarten"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/bovensteKaarten"
-        android:id="@+id/ondersteKaarten"
-        android:layout_marginLeft="13dp"
+        android:gravity="center"
         android:orientation="horizontal">
 
         <android.support.v7.widget.CardView
@@ -148,23 +138,20 @@
             android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-
-            android:layout_margin="1dp"
+            android:layout_margin="3dp"
             card_view:cardCornerRadius="2dp"
             card_view:contentPadding="10dp">
 
             <RelativeLayout
                 android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                 >
+                android:layout_height="fill_parent">
 
                 <ImageView
                     android:id="@+id/img_money"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:layout_centerHorizontal="true"
-                    android:src="@drawable/instagram"
-                    />
+                    android:src="@drawable/instagram" />
 
                 <TextView
                     android:id="@+id/tv_moneySaved"
@@ -173,10 +160,10 @@
                     android:layout_below="@+id/img_money"
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="5dp"
-                    android:textSize="20sp"
-                    android:textStyle="bold"
                     android:text="15€"
-                    />
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
+
                 <TextView
                     android:id="@+id/moneySavedDescription"
                     android:layout_width="wrap_content"
@@ -184,9 +171,8 @@
                     android:layout_below="@+id/tv_moneySaved"
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="2dp"
-                    android:textSize="12sp"
-                    android:text="totaal bespaard"
-                    />
+                    android:text="Totaal Bespaard"
+                    android:textSize="12sp" />
             </RelativeLayout>
         </android.support.v7.widget.CardView>
 
@@ -196,7 +182,7 @@
             android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_margin="1dp"
+            android:layout_margin="3dp"
             card_view:cardCornerRadius="2dp"
             card_view:contentPadding="10dp">
 
@@ -209,8 +195,7 @@
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:layout_centerHorizontal="true"
-                    android:src="@drawable/instagram"
-                    />
+                    android:src="@drawable/instagram" />
 
                 <TextView
                     android:id="@+id/tv_cigarettesSmokedToday"
@@ -219,11 +204,11 @@
                     android:layout_below="@+id/img_cig"
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="5dp"
-                    android:textSize="20sp"
-                    android:textColor="#ff0000"
-                    android:textStyle="bold"
                     android:text="15"
-                    />
+                    android:textColor="#ff0000"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
+
                 <TextView
                     android:id="@+id/cigarettesTodayDescription"
                     android:layout_width="wrap_content"
@@ -231,9 +216,8 @@
                     android:layout_below="@+id/tv_cigarettesSmokedToday"
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="2dp"
-                    android:textSize="12sp"
-                    android:text="sigaretten gerookt vandaag"
-                    />
+                    android:text="Vandaag Gerookt"
+                    android:textSize="12sp" />
             </RelativeLayout>
         </android.support.v7.widget.CardView>
     </LinearLayout>
@@ -241,11 +225,11 @@
     <View
         android:id="@+id/horizontalRule"
         android:layout_width="fill_parent"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="10dp"
         android:layout_height="1dp"
-        android:background="?android:attr/dividerHorizontal"
-        android:layout_below="@+id/ondersteKaarten"/>
+        android:layout_below="@+id/ondersteKaarten"
+        android:layout_marginBottom="10dp"
+        android:layout_marginTop="20dp"
+        android:background="?android:attr/dividerHorizontal" />
 
     <TextView
         android:id="@+id/motivationText"
@@ -253,16 +237,15 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/horizontalRule"
         android:layout_centerHorizontal="true"
-        android:textStyle="italic|bold"
-
-        android:text="Inspirerende quote hier" />
+        android:text="Inspirerende quote hier"
+        android:textStyle="italic|bold" />
 
     <View
         android:id="@+id/horizontalRule2"
         android:layout_width="fill_parent"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="20dp"
         android:layout_height="1dp"
-        android:background="?android:attr/dividerHorizontal"
-        android:layout_below="@+id/motivationText"/>
+        android:layout_below="@+id/motivationText"
+        android:layout_marginBottom="20dp"
+        android:layout_marginTop="10dp"
+        android:background="?android:attr/dividerHorizontal" />
 </RelativeLayout>
