--- a/app/src/main/res/layout/home_fragment_main.xml
+++ b/app/src/main/res/layout/home_fragment_main.xml
@@ -63,7 +63,7 @@
                     android:layout_below="@+id/img_time"
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="5dp"
-                    android:text="15h 23m"
+                    android:text="Geen Data"
                     android:textSize="20sp"
                     android:textStyle="bold" />
 
@@ -74,7 +74,7 @@
                     android:layout_below="@+id/tv_timeNotSmoked"
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="2dp"
-                    android:text="Laatste Sigaret"
+                    android:text="Niet Gerookt"
                     android:textSize="12sp" />
             </RelativeLayout>
         </android.support.v7.widget.CardView>
@@ -107,7 +107,7 @@
                     android:layout_below="@+id/img_nocig"
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="5dp"
-                    android:text="15"
+                    android:text="Geen Data"
                     android:textColor="#2baf0a"
                     android:textSize="20sp"
                     android:textStyle="bold" />
@@ -160,7 +160,7 @@
                     android:layout_below="@+id/img_money"
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="5dp"
-                    android:text="15€"
+                    android:text="Geen Data"
                     android:textSize="20sp"
                     android:textStyle="bold" />
 
@@ -171,7 +171,7 @@
                     android:layout_below="@+id/tv_moneySaved"
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="2dp"
-                    android:text="Totaal Bespaard"
+                    android:text="Euro Bespaard"
                     android:textSize="12sp" />
             </RelativeLayout>
         </android.support.v7.widget.CardView>
@@ -204,7 +204,7 @@
                     android:layout_below="@+id/img_cig"
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="5dp"
-                    android:text="15"
+                    android:text="Geen Data"
                     android:textColor="#ed0303"
                     android:textSize="20sp"
                     android:textStyle="bold" />
