Revert "Not Smoked time"
This reverts commit 19d4328a2e1fd94a7dee952059cf48f3f5094387.

--- a/app/src/main/res/layout/home_fragment_main.xml
+++ b/app/src/main/res/layout/home_fragment_main.xml
@@ -63,7 +63,7 @@
                     android:layout_below="@+id/img_time"
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="5dp"
-                    android:text="00:00:00"
+                    android:text="Geen Data"
                     android:textSize="20sp"
                     android:textStyle="bold" />
 
