--- a/app/src/main/res/layout/games_fragment_main.xml
+++ b/app/src/main/res/layout/games_fragment_main.xml
@@ -2,23 +2,45 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="hva.groepje12.quitsmokinghabits.ui.fragment.GameFragment">
+
+    <TextView
+        android:id="@+id/games_info"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:text="Op de momenten dat jij een notificatie krijgt wordt er ter afleiding één van de ingesteld apps uitgekozen ter afleiding. Hier kan je jou favoriete apps instellen. Onderaan vind je ook enkele suggesties!"
+        android:textAlignment="center"
+        android:textSize="16sp" />
+
+    <View
+        android:id="@+id/horizontalRule1"
+        android:layout_width="fill_parent"
+        android:layout_height="1dp"
+        android:layout_below="@id/games_info"
+        android:layout_marginBottom="10dp"
+        android:layout_marginTop="10dp"
+        android:background="?android:attr/dividerHorizontal" />
 
     <LinearLayout
         android:id="@+id/preferred_app_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
-        android:orientation="horizontal"
+        android:layout_below="@id/horizontalRule1"
+        android:layout_marginBottom="20dp"
+        android:layout_marginTop="10dp"
         android:gravity="center"
-        android:layout_marginTop="30dp"
-        android:layout_marginBottom="30dp">
+        android:orientation="horizontal">
 
         <!-- Preferred Apps -->
         <ImageView
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:layout_centerHorizontal="true"
             android:layout_marginStart="10dp"
             android:src="@drawable/add_app" />
 
@@ -52,27 +74,20 @@
         android:id="@+id/horizontalRule"
         android:layout_width="fill_parent"
         android:layout_height="1dp"
-        android:background="?android:attr/dividerHorizontal"
-        android:layout_below="@+id/preferred_app_layout"/>
+        android:layout_below="@+id/preferred_app_layout"
+        android:layout_marginBottom="10dp"
+        android:background="?android:attr/dividerHorizontal" />
 
     <!-- Recommend games -->
-    <TextView
-        android:id="@+id/recommendedGames"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/horizontalRule"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="10dp"
-        android:text="Aanbevolen apps" />
-
     <ListView
         android:id="@+id/recommended_game_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/preferred_app_layout"
+        android:layout_below="@+id/horizontalRule"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="30dp" />
+        android:layout_centerVertical="true"
+        android:divider="@android:color/transparent"
+        android:dividerHeight="10.0sp" />
     <!-- /Recommend games -->
 
 </RelativeLayout>
