--- a/app/src/main/res/layout/goals_fragment_main.xml
+++ b/app/src/main/res/layout/goals_fragment_main.xml
@@ -12,8 +12,8 @@
         android:id="@+id/section_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Doelen"
-        android:layout_alignParentTop="true" />
+        android:layout_alignParentTop="true"
+        android:text="Doelen" />
 
     <ListView
         android:id="@+id/list_goals"
